unpackaged/main/default/objects/Audit_Rule__c/fields/Audit_Comment__c.field-meta.xml
<CustomField>
    <fullName>Audit_Comment__c</fullName>
    <label>Audit Comment</label>
    <type>TextArea</type>
</CustomField>