unpackaged/main/default/objects/Audit_Rule__c/fields/Club__c.field-meta.xml
<CustomField>
    <fullName>Club__c</fullName>
    <label>Club</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACA</fullName>
            </value>
            <value>
                <fullName>NE</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>