unpackaged/main/default/objects/Audit_Rule__c/fields/Expression__c.field-meta.xml
<CustomField>
    <fullName>Expression__c</fullName>
    <label>Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>