unpackaged/main/default/objects/Audit_Rule__c/fields/Expression_Type__c.field-meta.xml
<CustomField>
    <fullName>Expression_Type__c</fullName>
    <defaultValue>&quot;AND&quot;</defaultValue>
    <label>Expression Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>