unpackaged/main/default/objects/Audit_Rule__c/fields/No_of_Actions__c.field-meta.xml
<CustomField>
    <fullName>No_of_Actions__c</fullName>
    <label>No. of Actions</label>
    <summaryForeignKey>Audit_Rule_Action__c.Audit_Rule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>