unpackaged/main/default/objects/Audit_Rule__c/fields/No_of_Criteria__c.field-meta.xml
<CustomField>
    <fullName>No_of_Criteria__c</fullName>
    <label>No. of Criteria</label>
    <summaryForeignKey>Audit_Rule_Critieria__c.Audit_Rule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>