unpackaged/main/default/objects/Audit_Rule__c/listViews/All_Audit_Rules.listView-meta.xml
<ListView>
    <fullName>All_Audit_Rules</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <columns>Expression_Type__c</columns>
    <columns>No_of_Actions__c</columns>
    <columns>No_of_Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Audit Rules</label>
</ListView>